Bug 960565 - Reset touch counter with every touch start event. r=kats